--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "czh-node-liv",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "temp/index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
