--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/bigoldcat123/node-lib#readme",
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
     "rollup": "^4.17.2",
     "rollup-plugin-typescript2": "^0.36.0",
