--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "glob": "^10.3.15"
   }
 }
