--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "devDependencies": {
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.12.12",
     "rollup": "^4.17.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "commander": "^12.1.0"
   }
 }
